till about us not including counter

--- a/index.htm
+++ b/index.htm
@@ -16,18 +16,38 @@
     </ul>
     <div class="hor-div">
         <div class="ver-img">
-            <img src="square.jpg" alt="" align="top">
+            <img src="decovify.png" alt="" width="100%">
         </div>
-        <div class="ver-txt">bla bla bla bla bla bla bla blaa bla bla bla bla bla bla bla bla bla bla bla bla blaa bla
-            bla bla bla bla bla bla bla bla bla bla bla blaa bla bla bla bla bla </div>
-        
+        <div class="ver-txt">Visage
+            A face mask with a shield that adds protection to the eyes against liquid splash along with preventing the
+            wearer from touching their face. Filter allows airflow along with providing maximum filtration. Find out how
+            Visage is your best and first safety equipment by clicking on the link below.<br><a href="">Learn More</a>
+        </div>
     </div>
     <div class="hor-div">
         <div class="ver-img">
-            <img src="square.jpg" alt="" align="top">
+            <img src="covring.jpeg" alt="" width="100%">
         </div>
-        <div class="ver-txt">bla bla bla bla bla bla bla blaa bla bla bla bla bla bla bla bla bla bla bla bla blaa bla
-            bla bla bla bla bla bla bla bla bla bla bla blaa bla bla bla bla bla </div>
+        <div class="ver-txt">CovRING is a hand gear that can be worn as a RING on your index finger. It prevents skin
+            contamination of COVID-19 from various surfaces by opening doors, clicking ATM buttons, carrying bags etc.
+            with ZERO SURFACE CONTACT. It comes with a case that attaches to your belt. It has a sanisting sponge layer
+            which can be washed & refilled with a hand sanitiser. It has an ergonomic, comfortable and elegant design,
+            prototyped by the students of IIT Delhi. Check out this innovative solution to combat the virus by clicking
+            on the link below.<br><a href="">Learn More</a></div>
+    </div>
+    <div class="hor-div">
+        <span class="about-us-heading">About Us</span>
+        <span class="about-us-content">
+            bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+            bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+            bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+            bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+            bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+            bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+            bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+            bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+            bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+        </span>
     </div>
 </body>
 
