--- a/index.htm
+++ b/index.htm
@@ -16,7 +16,7 @@
     </ul>
     <div class="hor-div">
         <div class="ver-img">
-            <img src="decovify.png" alt="" width="100%">
+            <img src="visage.png" alt="" width="100%">
         </div>
         <div class="ver-txt">Visage
             A face mask with a shield that adds protection to the eyes against liquid splash along with preventing the
