--- a/index.htm
+++ b/index.htm
@@ -38,15 +38,11 @@
     <div class="hor-div">
         <span class="about-us-heading">About Us</span>
         <span class="about-us-content">
-            bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
-            bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
-            bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
-            bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
-            bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
-            bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
-            bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
-            bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
-            bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+            Enactus IIT Delhi is the student chapter of Enactus, an international organization of student, academic and
+            business leaders committed to using the power of entrepreneurial action to transform lives and shape a
+            better and more sustainable world. We are a team of 50+ students working on social initiatives to impact the
+            lives of people by helping them set up their own businesses and transforming them into successful
+            entrepreneurs.
         </span>
     </div>
 </body>
