--- a/index.htm
+++ b/index.htm
@@ -4,46 +4,118 @@
 <head>
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
-    <ul>
-        <li><a href="default.asp">Contact</a></li>
-        <li><a href="news.asp">CovRing</a></li>
-        <li><a href="contact.asp">Visage</a></li>
-        <li><a href="about.asp">Home</a></li>
-    </ul>
-    <div class="hor-div">
-        <div class="ver-img">
-            <img src="visage.png" alt="" width="100%">
+    <nav class="navbar-custom navbar navbar-expand-md navbar-dark">
+        <!-- Brand -->
+        <a class="navbar-brand" href="#"><img src="logo.png" alt="Logo" style="height:30px;"></a>
+
+        <!-- Toggler/collapsibe Button -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Navbar links -->
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Visage</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">CovRing</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+            </ul>
         </div>
-        <div class="ver-txt">Visage
-            A face mask with a shield that adds protection to the eyes against liquid splash along with preventing the
-            wearer from touching their face. Filter allows airflow along with providing maximum filtration. Find out how
-            Visage is your best and first safety equipment by clicking on the link below.<br><a href="">Learn More</a>
+    </nav>
+    <div id="demo" class="carousel slide" data-ride="carousel">
+
+        <!-- Indicators -->
+        <ul class="carousel-indicators">
+            <li data-target="#demo" data-slide-to="0" class="active"></li>
+            <li data-target="#demo" data-slide-to="1"></li>
+            <li data-target="#demo" data-slide-to="2"></li>
+        </ul>
+
+        <!-- The slideshow -->
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="virus.png" class="d-block img-fluid" alt="Los Angeles">
+            </div>
+            <div class="carousel-item">
+                <img src="virus.png" class="d-block img-fluid"  alt="Chicago">
+            </div>
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="carousel-control-prev" href="#demo" data-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+        </a>
+        <a class="carousel-control-next" href="#demo" data-slide="next">
+            <span class="carousel-control-next-icon"></span>
+        </a>
+
+    </div>
+    <div style="display:inline-block;text-align:center;
+        background: transparent linear-gradient(180deg, #0C2740 0%, #0C2740 42%, #0B587E 64%, #26A3C1 85%, #A7CAD6 97%, #D6E3E9 100%) 0% 0% no-repeat padding-box;
+        width:100%;box-sizing: border-box;padding-top:40px;color:white;">
+        <div class="contain">
+            <img src="visage.png" alt="">
+            <img src="mask.png" alt="">
+            <h4>
+                A face MASK with a SHIELD that adds protection to the eyes against liquid splash along with preventing
+                the wearer from TOUCHING their face.</h4>
+            <a class="learnmore btn btn-info">Learn More</a>
+        </div>
+        <div class="contain">
+            <img src="covring.png" alt="">
+            <img src="exp.png" alt="">
+            <h4>
+                A hand gear that can be worn as a RING preventing skin contamination of COVID-19 from various surfaces
+                by maintaining MINIMAL SURFACE CONTACT.</h4>
+            <a class="learnmore btn btn-info">Learn More</a>
+        </div>
+        <div class="container-fluid">
+            <h1 style="font-size:48px;color:#0C2740;">About Us</h1>
+            <p style="padding:10px;font-size:32px;font-weight:lighter;color: #0C0B10;">Decovify, is a venture by IIT
+                Delhi students, with an aim to liberate people from their fears and keep
+                them safe as we transition into routine lives. We have created a range of innovative, personal
+                preventive solutions designed to be used by the masses.</p>
         </div>
     </div>
-    <div class="hor-div">
-        <div class="ver-img">
-            <img src="covring.jpeg" alt="" width="100%">
+    <div class="foot">
+        <div class="container text-white text-center">
+            <div class="row">
+                <div class="col-sm-6 text-sm-left" style="font-size: 20px;">&#169; <a href="decovify.in">decovify.in</a></div>
+                <div class="col-sm-6 text-sm-right">
+                    <a>
+                    <i class="fa fa-facebook-square" style="font-size:26px;"></i></a>
+                    &nbsp;&nbsp;
+                    <a>
+                    <i class="fa fa-instagram" style="font-size:26px;"></i></a>
+                </div>
+            </div>
         </div>
-        <div class="ver-txt">CovRING is a hand gear that can be worn as a RING on your index finger. It prevents skin
-            contamination of COVID-19 from various surfaces by opening doors, clicking ATM buttons, carrying bags etc.
-            with ZERO SURFACE CONTACT. It comes with a case that attaches to your belt. It has a sanisting sponge layer
-            which can be washed & refilled with a hand sanitiser. It has an ergonomic, comfortable and elegant design,
-            prototyped by the students of IIT Delhi. Check out this innovative solution to combat the virus by clicking
-            on the link below.<br><a href="">Learn More</a></div>
-    </div>
-    <div class="hor-div">
-        <span class="about-us-heading">About Us</span>
-        <span class="about-us-content">
-            Enactus IIT Delhi is the student chapter of Enactus, an international organization of student, academic and
-            business leaders committed to using the power of entrepreneurial action to transform lives and shape a
-            better and more sustainable world. We are a team of 50+ students working on social initiatives to impact the
-            lives of people by helping them set up their own businesses and transforming them into successful
-            entrepreneurs.
-        </span>
     </div>
 </body>
 
