--- a/visage/index.htm
+++ b/visage/index.htm
@@ -35,16 +35,16 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Home</a>
+                    <a class="nav-link" href="../index.htm">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Visage</a>
+                    <a class="nav-link active" href="index.htm">Visage</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">CovRing</a>
+                    <a class="nav-link" href="../covring/index.htm">CovRing</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="../contact/index.htm">Contact</a>
                 </li>
             </ul>
         </div>
@@ -52,10 +52,10 @@
     <div class="contain">
         <div class="container" style="padding-top:30px;">
             <div class="row">
-                <div class="col-sm-6" class="visage_logo" style="margin-top:50px;margin-bottom:60px;">
+                <div class="col-sm-6" class="visage_logo" style="margin-top:90px;margin-bottom:60px;">
                     <img src="visage.png" style="width:350px;max-width:100%;">
                     <a href="">
-                    <img src="buynow.png" style="width: 200px;max-width:80%;margin-top:40px ;" alt="">
+                    <img src="buynow.png" style="width: 200px;max-width:80%;margin-top:80px ;" alt="">
                     </a>
                 </div>
                 <div class="col-sm-6">
@@ -63,13 +63,13 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-6" style="margin-top:40px;">
+                <div class="col-sm-6" style="margin-top:80px;">
                     <img src="eye.png" style="max-width:150px;" alt="">
                     <span style="display: block;color:white;padding:15px;font-size:24px;max-width:300px;margin:auto;">
                         Prevents the contraction of diseases through eyes.</span>
 
                 </div>
-                <div class="col-sm-6" style="margin-top:40px;">
+                <div class="col-sm-6" style="margin-top:80px;">
                     <img src="man_wearing_mask.png" style="border-radius:150px;max-width:150px;" alt=""><span
                         style="display: block;color:white;padding:15px;font-size:24px;max-width:400px;margin:auto;">Provides
                         entire face coverage. Comfortable and better fit to ensure better seal.</span></div>
