--- a/index.htm
+++ b/index.htm
@@ -35,47 +35,27 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Home</a>
+                    <a class="nav-link active" href="index.htm">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Visage</a>
+                    <a class="nav-link" href="visage/index.htm">Visage</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">CovRing</a>
+                    <a class="nav-link" href="covring/index.htm">CovRing</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="contact/index.htm">Contact</a>
                 </li>
             </ul>
         </div>
     </nav>
-    <div id="demo" class="carousel slide" data-ride="carousel">
-
-        <!-- Indicators -->
-        <ul class="carousel-indicators">
-            <li data-target="#demo" data-slide-to="0" class="active"></li>
-            <li data-target="#demo" data-slide-to="1"></li>
-            <li data-target="#demo" data-slide-to="2"></li>
-        </ul>
-
-        <!-- The slideshow -->
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="virus.png" class="d-block img-fluid" alt="Los Angeles">
-            </div>
-            <div class="carousel-item">
-                <img src="virus.png" class="d-block img-fluid"  alt="Chicago">
+    <div class="home text-center container-fluid" style="padding:0;">
+        <div class="row" style="width:100%;height:100%;background-color:rgba(0,0,0,0.5);margin:0;">
+            <div class="col-sm-12 align-self-center">
+            <img src="logo.png" alt="" style="width:700px;max-width:90%;"><br>
+            <span style="display: inline-block;width:90%;color:white;font-size:36px;">Protective Solutions for Covid-19</span>
             </div>
         </div>
-
-        <!-- Left and right controls -->
-        <a class="carousel-control-prev" href="#demo" data-slide="prev">
-            <span class="carousel-control-prev-icon"></span>
-        </a>
-        <a class="carousel-control-next" href="#demo" data-slide="next">
-            <span class="carousel-control-next-icon"></span>
-        </a>
-
     </div>
     <div style="display:inline-block;text-align:center;
         background: transparent linear-gradient(180deg, #0C2740 0%, #0C2740 42%, #0B587E 64%, #26A3C1 85%, #A7CAD6 97%, #D6E3E9 100%) 0% 0% no-repeat padding-box;
@@ -86,7 +66,7 @@
             <h4>
                 A face MASK with a SHIELD that adds protection to the eyes against liquid splash along with preventing
                 the wearer from TOUCHING their face.</h4>
-            <a class="learnmore btn btn-info">Learn More</a>
+            <a class="learnmore btn btn-info" href="visage/index.htm">Learn More</a>
         </div>
         <div class="contain">
             <img src="covring.png" alt="">
@@ -94,9 +74,9 @@
             <h4>
                 A hand gear that can be worn as a RING preventing skin contamination of COVID-19 from various surfaces
                 by maintaining MINIMAL SURFACE CONTACT.</h4>
-            <a class="learnmore btn btn-info">Learn More</a>
+            <a class="learnmore btn btn-info" href="covring/index.htm">Learn More</a>
         </div>
-        <div class="container-fluid">
+        <div class="container-fluid" style="padding-top:50px;padding-bottom: 10px;">
             <h1 style="font-size:48px;color:#0C2740;">About Us</h1>
             <p style="padding:10px;font-size:32px;font-weight:lighter;color: #0C0B10;">Decovify, is a venture by IIT
                 Delhi students, with an aim to liberate people from their fears and keep
@@ -107,16 +87,18 @@
     <div class="foot">
         <div class="container text-white text-center">
             <div class="row">
-                <div class="col-sm-6 text-sm-left" style="font-size: 20px;">&#169; <a href="decovify.in">decovify.in</a></div>
+                <div class="col-sm-6 text-sm-left" style="font-size: 20px;">&#169; <a href="decovify.in">decovify.in</a>
+                </div>
                 <div class="col-sm-6 text-sm-right">
                     <a>
-                    <i class="fa fa-facebook-square" style="font-size:26px;"></i></a>
+                        <i class="fa fa-facebook-square" style="font-size:26px;"></i></a>
                     &nbsp;&nbsp;
                     <a>
-                    <i class="fa fa-instagram" style="font-size:26px;"></i></a>
+                        <i class="fa fa-instagram" style="font-size:26px;"></i></a>
                 </div>
             </div>
         </div>
     </div>
 </body>
+
 </html>
